k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "flask-app-ip"
    networking.gke.io/managed-certificates: "flask-app-ssl-cert"
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: your-domain.com  # Kendi domain'inizi buraya yazın
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: flask-app-service
            port:
              number: 80
